Mail: Signed attachment causes hide of unsigned body
When an unsigned mail has a signed plain-text non-mail attachment, the mail is detected as partially GPG signed
and the mail body is hidden by default.
An example is this mail (mbox) from debian-devel.
This is with evolution/evolution-data-server 3.49.3-1 from Debian unstable.