I#2503 - Mail: Signed attachment causes hide of unsigned body

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/2503